YES! Making requests cookie interception is working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
         completions."
     </string>
 
+    <string name="BASE_URL">https://sakai.rutgers.edu/direct/</string>
     <string name="COOKIE_URL_1">https://sakai.rutgers.edu/sakai-login-tool/container</string>
     <string name="COOKIE_URL_2">https://sakai.rutgers.edu/portal</string>
 </resources>
