--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     </string>
 
     <string name="BASE_URL">https://sakai.rutgers.edu/direct/</string>
+
     <string name="COOKIE_URL_1">https://sakai.rutgers.edu/sakai-login-tool/container</string>
     <string name="COOKIE_URL_2">https://sakai.rutgers.edu/portal</string>
+    <string name="COOKIE_URL_3">https://cas.rutgers.edu/login</string>
 </resources>
