--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="all_sites">All Sites</string>
 
     <string name="BASE_URL">https://sakai.rutgers.edu/direct/</string>
-
+    <string name="CAS_BASE_URL">https://cas.rutgers.edu/login?service=https%3A%2F%2Fsakai.rutgers.edu%2Fsakai-login-tool%2Fcontainer</string>
     <string name="COOKIE_URL_1">https://sakai.rutgers.edu/sakai-login-tool/container</string>
     <string name="COOKIE_URL_2">https://sakai.rutgers.edu/portal</string>
     <string name="COOKIE_URL_3">https://cas.rutgers.edu/login</string>
