seperated API classes from usable classes, and created the models

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,10 @@
     </string>
 
     <string name="all_sites">All Sites</string>
+    <string name="announcements">Announcements</string>
+    <string name="assignments">Assignments</string>
+    <string name="gradebook">Gradebook</string>
+    <string name="nullString">None</string>
 
     <string name="BASE_URL">https://sakai.rutgers.edu/direct/</string>
     <string name="CAS_BASE_URL">https://cas.rutgers.edu/login?service=https%3A%2F%2Fsakai.rutgers.edu%2Fsakai-login-tool%2Fcontainer</string>
