--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,12 @@
     <string name="announcements">Announcements</string>
     <string name="assignments">Assignments</string>
     <string name="gradebook">Gradebook</string>
-    <string name="nullString">None</string>
+    <string name="none">None</string>
+
+    <string name="spring">Spring</string>
+    <string name="summer">Summer</string>
+    <string name="winter">Winter</string>
+    <string name="fall">Fall</string>
 
     <string name="BASE_URL">https://sakai.rutgers.edu/direct/</string>
     <string name="CAS_BASE_URL">https://cas.rutgers.edu/login?service=https%3A%2F%2Fsakai.rutgers.edu%2Fsakai-login-tool%2Fcontainer</string>
