passes SitePages through intent on the click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="summer">Summer</string>
     <string name="winter">Winter</string>
     <string name="fall">Fall</string>
+    
+    <string name="AllSitesActivity">AllSitesActivity</string>
 
     <string name="BASE_URL">https://sakai.rutgers.edu/direct/</string>
     <string name="CAS_BASE_URL">https://cas.rutgers.edu/login?service=https%3A%2F%2Fsakai.rutgers.edu%2Fsakai-login-tool%2Fcontainer</string>
