--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
 
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_announcements">Announcements</string>
     <string name="title_assignments">Assignments</string>
     <string name="title_gradebook">Gradebook</string>
     <string name="title_settings">Settings</string>
