--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
     <string name="title_assignments">Assignments</string>
     <string name="title_gradebook">Gradebook</string>
     <string name="title_settings">Settings</string>
+
+    <string name="no_grades">No grades to display</string>
 </resources>
