--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
     <string name="title_settings">Settings</string>
 
     <string name="no_grades">No grades to display</string>
+
+    <string name="fetched_grades">Fetched latest grades!</string>
 </resources>
