--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,5 @@
 
     <string name="fetched_grades">Fetched latest grades!</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="assignment_shared_element">Shared Assignment Element</string>
 </resources>
