--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,10 +44,10 @@
     <string name="title_settings">Settings</string>
 
     <string name="no_grades">This course has no grades</string>
-    <string name="network_error">A network error has occured. Please try again later. </string>
+    <string name="network_error">A network error has occurred. Please try again later. </string>
 
     <string name="fetched_grades">Fetched latest grades!</string>
 
-    <string name="grade_item">%1$.2f/%2$.2f</string>
+    <string name="grade_item">%1$s/%2$.2f</string>
     <string name="grade_item_null">/%1$.2f</string>
 </resources>
