change color, created different resource file for nav activity for api < 21

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     </string>
 
     <string name="all_sites">All Sites</string>
-    <string name="announcements">Announcements</string>
+    <string name="announcements">Alerts</string>
     <string name="assignments">Assignments</string>
     <string name="gradebook">Gradebook</string>
     <string name="none_string">None</string>
@@ -38,7 +38,7 @@
 
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_announcements">Announcements</string>
+    <string name="title_announcements">Alerts</string>
     <string name="title_assignments">Assignments</string>
     <string name="title_gradebook">Gradebook</string>
     <string name="title_settings">Settings</string>
