--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,11 @@
     <string name="grade_item">%1$s/%2$.2f</string>
     <string name="grade_item_null">/%1$.2f</string>
     <string name="title_activity_settings">SettingsActivity</string>
+
+    <string name="announcement_type">ANNOUNCEMENT_TYPE</string>
+    <string name="all_announcements_tag">ALL_ANNOUNCEMENTS</string>
+    <string name="site_announcements_tag">SITE_ANNOUNCEMENTS</string>
+    <string name="single_announcement_tag">SINGLE_ANNOUNCEMENT</string>
+    <string name="no_announcements">There are no announcements available.</string>
 </resources>
 
