--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="gradebook">Gradebook</string>
     <string name="none_string">None</string>
 
+    <string name="gradebook_site">Gradebook</string>
+    <string name="announcements_site">Announcements</string>
+
     <string name="spring">Spring</string>
     <string name="summer">Summer</string>
     <string name="winter">Winter</string>
