announcementviewmodel does not extend base view model, use serializables to pass data to announcements fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="announcement_type">ANNOUNCEMENT_TYPE</string>
     <string name="all_announcements_tag">ALL_ANNOUNCEMENTS</string>
     <string name="site_announcements_tag">SITE_ANNOUNCEMENTS</string>
+    <string name="siteid_to_course_map">SITEIDTOCOURSE</string>
     <string name="single_announcement_tag">SINGLE_ANNOUNCEMENT</string>
     <string name="no_announcements">There are no announcements available.</string>
 </resources>
