--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,5 +63,6 @@
 
 
     <string name="no_announcements">There are no announcements available.</string>
+    <string name="title_activity_site_announcement">SiteAnnouncementActivity</string>
 </resources>
 
