--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="gradebook_site">Gradebook</string>
     <string name="announcements_site">Announcements</string>
     <string name="resources_site">Resources</string>
+    <string name="assignments_site">Assignments</string>
 
     <string name="spring">Spring</string>
     <string name="summer">Summer</string>
@@ -64,6 +65,7 @@
 
     <string name="site_type_tag" translatable="false">SITE_TYPE</string>
     <string name="course_tag" translatable="false">COURSE_TAG</string>
+    <string name="courses_tag" translatable="false">COURSES_TAG</string>
 
 
 
